<resources>
    <string name="app_name">ParkNow</string>
    <string name="logo_app">TODO</string>
    <string name="profitable_home">profitable</string>
    <string name="easy_home">Easy</string>
    <string name="fast_home">Fast</string>
    <string name="home">Home</string>
    <string name="home_log">home_log</string>
    <string name="txt_home">Have you found parking already? Probably not</string>
    <string name="start_now_home">Start Now</string>
    <string name="sign_in_b">Alreay have an account.Sign In</string>
    <string name="b_sign">Already have an account.Sign In</string>
    <string name="b_register">צור חשבון חדש</string>
    <string name="txt_home_">החנייה הכי מהירה שתמצא</string>
    <string name="txt_sign">התחבר כ :</string>
    <string name="logo">logo</string>
    <string name="b_owner_sign">שוכר</string>
    <string name="b_renter_sign">משכיר</string>
    <string name="psw_enter">סיסמא</string>
    <string name="txt_enter">מייל</string>
    <string name="sign_google">sign_google</string>
    <string name="registerlogo">registerlogo</string>
    <string name="register_lo">TODO</string>
    <string name="t_id">תצלום תעודת זהות</string>
    <string name="t_femilyname">:שם משפחה</string>
    <string name="t_name">:שם</string>
    <string name="t_username">שם משתמש:</string>
    <string name="t_psw">סיסמא:</string>
    <string name="t_meil">דואל:</string>
    <string name="t_verfiy">ודא מייל:</string>
    <string name="t_c_licence">תצלום תעודת רישון בתוקף</string>
    <string name="b_reg">הרשמה</string>
    <string name="b_connect">התחבר</string>
    <string name="txt_forget">שכחת סיסמא?לחץ כאן.</string>
    <string name="licence_photo_register">licence_photo</string>
    <string name="image_rg">image</string>
    <string name="username_c">username_c</string>
    <string name="search_l">search_l</string>
    <string name="b_s">חיפוש חנייה</string>
    <string name="b_c">צור חנייה</string>
    <string name="googel_maps_b">חיפוש באמצעות GOOGEL MAPS</string>
    <string name="g_img">g_img</string>
    <string name="w_img">w_img</string>
    <string name="choose_time_start">בחר שעת התחלה</string>
    <string name="choose_time_finish">בחר שעת סיום</string>
    <string name="choose_date">בחר תאריך</string>
    <string name="add_credit">הוספת כרטיס</string>
    <string name="choose_price">בחר מחיר</string>
    <string name="choose_adresss">בחר כתובת</string>
    <string name="save_p">שמור חנייה</string>
    <string name="c_b">c_b</string>
    <string name="todo">TODO</string>
    <string name="h_txt">כבר לא מבזבזים זמן בחיפוש חנייה, הירשמו ותתחילו להנות מחנייה מהירה ומשתלמת !</string>
    <string name="parknow">יש לך חשבון בParkNow ? היכנס</string>
    <string name="payment_logo">payment_logo</string>
    <string name="owner_name">שם בעל הכרטיס:</string>
    <string name="policy_logo">policy_logo</string>
    <string name="text_1">מדיניות הפרטיות -ParkNow</string>
    <string name="text_2">[עודכן לאחרונה אוגוסט, 2020]</string>
    <string name="renter_logo">renter_logo</string>
    <string name="renter_text">אם בבעלותך חנייה להשכרה ,השכר אותה למשתמשי המערכת וקבל תשלום מידיי</string>
    <string name="renter_text_1">השכירו את החנייה הפרטית שלכם ותתחילו להרוויח כסף !</string>
    <string name="renter_text_2">מה צריך לעשות ?</string>
    <string name="renter_txt_2">1. הגדירו כתובת,שעה ותאריך להשכרה.</string>
    <string name="renter_txt_3">2. הגדירו את תעריף החנייה השעתי.</string>
    <string name="renter_txt_4">3. שתפו את מקום החנייה שלכם על המפה .</string>
    <string name="b_rent">המשך ליצירת חנייה</string>
    <string name="b_skip">!הבנתי</string>
    <string name="b_search">חפש חנייה</string>
    <string name="s_time">time</string>
    <string name="s_time_2">מדיניות הפרטיות – ParkNow
[עודכן לאחרונה אוגוסט, 2020]
כללי
מדיניות הפרטיות של האתר )להלן: "מדיניות הפרטיות"( מסבירה את המדיניות של האתר ביחס לשימוש במידע
פרטי אשר נמסר על ידי משתמשי האתר במסגרת השימוש באתר ובשירותים המוצעים בו.
הנהלת האתר מכבדת את הפרטיות של משתמשי האתר והינה מחויבת להגנת מידע פרטי אשר נמסר להנהלת
האתר במסגרת השימוש באתר, באופן המפורט במדיניות פרטיות זו. מדיניות הפרטיות היא חלק בלתי נפרד מ"תנאי
השימוש" המפורסמים באתר )"תנאי השימוש"( ועושה שימוש במונחים המוגדרים בתנאי השימוש, כהגדרתם
בתנאי השימוש; בהתאם, יש לקרוא אותה ביחד עם תנאי השימוש.
מדיניות הפרטיות יכולה להשתנות בכל עת, בהתאם להחלטת הנהלת האתר )כהגדרתה להלן(. בכל מקרה בו יבוצעו
שינויים במדיניות הפרטיות, מועד העדכון האחרון יופיע בראש עמוד זה. על כן, הנהלת האתר ממליצה למשתמש
לעיין במדיניות הפרטיות בכל עת בה יעשה שימוש באתר ולראות באיזה אופן הנהלת האתר משתמשת במידע
שנאסף על המשתמש בעת השימוש באתר. ככל שאינך מסכים לשינוי כלשהו במדיניות הפרטיות, הסעד היחיד
הוא הפסקת השימוש באתר ובשירותים. כל שינוי במדיניות הפרטיות יכנס לתוקף מיד עם פרסומו באתר במסגרת
מדיניות הפרטיות, אלא אם נאמר אחרת בפרסום בדבר השינוי של מדיניות הפרטיות.
באמצעות השימוש באתר ובשירותים, המשתמש מביע את הסכמתו לכל שימוש אשר יעשה במידע שיאסף אודותיו
לרבות, אך לא רק, מידע אישי( כמפורט במדיניות הפרטיות).
מי אנחנו
האתר מנוהל ומופעל על ידי חברת ParkNow, חברה פרטית ישראלית שמספרה 519332515.
איסוף מידע
במהלך השימוש באתר ובשירותים, הנהלת האתר )ו/או מי מטעמה( אוספת ושומרת מידע המתקבל מן המשתמש
וכן מפעילותו של המשתמש באתר, לרבות אך מבלי למעט, שם, תעודת זהות, כתובת דואר, כתובת דואר אלקטרוני,
אמצעי תשלום ומספר טלפון, וכן נתונים אחרים אשר יתלוו אל הפרטים המזהים, פרטי האירוע אשר המשתמש
מארגן או כרטיסים אשר נרכשו על ידי משתמש באתר. בנוסף, הנהלת האתר אוספת ביחס לכל משתמש פירוט
הקשור לפעילותו באתר, לרבות, אך מבלי למעט, פרסומות שקרא המשתמש באתר, העמודים בהם צפה המשתמש,
מועד ושעת הגישה לאתר, דרך הגישה של המשתמש לאתר, כתובת ה-IP שממנה פנה המשתמש לאתר ועוד.
הנהלת האתר )ו/או מי מטעמה( אוספת את המידע בעת השימוש של המשתמש באתר וכן בעת תקשורת בין
המשתמש להנהלת האתר )ו/או מי מטעמה(. הנהלת האתר מבצעת ניתוחים שונים ביחס למידע האמור, לרבות, אך
מבלי למעט, ניתוחים סטטיסטיים ופילוחי שוק שונים, בין ביחס למידע המתקבל ממשתמש בודד ובין ביחס לאגרגציה
של המידע המתקבל ממספר משתמשים )"הניתוחים"(.
המשתמש אינו חייב על פי חוק למסור כל מידע אודותיו, אם כי מסירתו תלויה ברצונו ובהסכמתו. אולם, אם לא ימסור
פרטים כאמור, עשויה חוויית המשתמש להיפגם ו/או חלק מן התכונות של האתר לא יהיו זמינות למשתמש, ובמקרים
מסוימים, הנהלת האתר לא תוכל לספק למשתמש את השירותים המבוקשים על ידו.
שימוש במידע
המידע אשר יאסף על ידי הנהלת האתר ו/או מי מטעמה כאמור לעיל יישמר במאגרי המידע של הנהלת האתר וישמש
אותה לצורך מתן השירותים המוצעים באתר. כמו כן, המידע יאפשר להנהלת האתר לשפר ולהעשיר את התוכן
והשירותים המוצעים באתר, להציע שירותים ותכנים נוספים ולהתאים את האתר, התוכן והשירותים להעדפות
המשתמשים.
חלק מהנתונים ישמשו את הנהלת האתר כדי ליצור עם המשתמש קשר לצרכים הקשורים במתן השירותים ומתן
שירותי תמיכה בקשר אליהם, ואף לצורך הצעת הצעות שיווקיות למשתמש, ככל שהוא נתן את הסכמתו לכך.
בנוסף, הנהלת האתר עשויה לעשות שימוש במידע על המשתמש לצורך קיום חובה חוקית או צו שיפוטי שחל עליה,
וכן לצורך הגנה על האינטרסים, הזכויות והנכסים של הנהלת האתר וצדדים שלישיים.
מובהר, כי הנהלת האתר תהיה רשאית לעשות במידע שאינו מזהה משתמש ספציפי שימושים נוספים על אלו
המפורטים לעיל ובמדיניות פרטיות זו.

אבטחת מידע
המידע הפרטי אשר נמסר על ידי המשתמש לאתר מקודד ומאובטח על ידי טכנולוגיית (Layers Socket Secure (SSL .
פרוטוקול SSL הינו פרוטוקול תקשורת המאפשר העברה בטוחה של מידע ברשת באמצעות הצפנת המידע. דפים
המאובטחים על ידי פרוטוקול SSL יסומנו בסמל של מנעול בתחתית הדפדפן. בנוסף, השרתים בהם הנהלת האתר
שומרת את המידע הפרטי נמצאים באזור מאובטח עם גישה מוגבלת.
אף שהנהלת האתר מאבטחת את המידע הפרטי הנמסר באתר באמצעות פרוטוקול SSL המהווה סטנדרט עולמי
לאבטחת מידע, ואף כי ננקטים על ידי הנהלת האתר אמצעי האבטחה המצוינים לעיל, ככל מערכת אבטחה, אין בהם
ביטחון מוחלט. לפיכך, הנהלת האתר אינה יכולה להבטיח או להתחייב כי המידע הפרטי יהיה מוגן לחלוטין מפני
גישה לא מאושרת.
העברה של מידע לצד שלישי
הנהלת האתר לא תמסור את המידע הפרטי לצד שלישי, אלא במקרים הבאים: )1 )ככל שיידרש לצורך מתן השירותים
המוצעים באתר, כגון מסירת מידע רלוונטי למארגני האירוע לצורך אישור רכישת כרטיסים וכניסת משתמשים אל
האירוע אותו הם מארגנים באתר, וכן לצורך פעילויות התומכות במתן השירותים )כגון עורכי דין, רואי חשבון, פיתוח
עסקי ויועצים אחרים(; )2 )במקרה של מחלוקת משפטית בין הנהלת האתר למשתמש, לרבות במקרה של אי פרעון
תשלומים על ידי המשתמש, אשר תחייב את חשיפת פרטי המשתמש; )3 )אם המשתמש יבצע באתר מעשה בלתי
חוקי או יפר את תנאי השימוש; )4 )אם יתקבל צו שיפוטי המורה על מסירת המידע לצד שלישי כלשהו; )5 )לצורך
שמירה והכנה על זכויות, נכסי וקניינה של הנהלת האתר או )6 )בכל מקרה שבו הנהלת האתר תמכור, תמחה או
תסב חלק מעסקיה או את כל עסקיה ו/או נכסיה לצד שלישי, או אם היא תירכש או תתמזג עם צד שלישי, או אם היא
תפתח בהליך של פשיטת רגל או של חדלות פירעון, הנהלת האתר תהיה רשאית למכור, להסב או להעביר לצד שלישי
כאמור, את כל המידע על המשתמש וכן כל מידע אחר נוסף שסופק לה על ידי המשתמש.
כל שימוש במידע על המשתמש על ידי צדדים שלישיים הינו באחריותם הבלעדית של אותם צדדים שלישיים והנהלת
האתר לא תישא באחריות כלשהי לשימוש כאמור.
כמו כן, הנהלת האתר תוכל להעביר מידע שאינו מזהה משתמש ספציפי לצדדים שלישיים, דוגמת מפרסמים.
בבקשה לתקן את המידע או למוחקו.
ויתור
הנהלת האתר אינה נושאת באחריות לנזק שייגרם מאירועים מעבר לשליטתה הישירה. אין ביכולת הנהלת האתר
להבטיח שלא תהיינה שגיאות בביצועים באבטחת פרטיות המידע האישי אודות המשתמש. כמו כן, אין הנהלת האתר
נושאת באחריות לכל מקרה או נזק, ישיר או עקיף, בקשר עם שימוש ו/או מסירת המידע אישי הכולל בין היתר,
חשיפת פרטים אישיים בשל טעויות, גישה לא מורשית של צדדים שלישיים וכל גורם אחר שאינו בשליטתה הסבירה.
יצירת קשר
בכל שאלה בנוגע למדיניות פרטיות זו, ניתן ליצור קשר עם הנהלת האתר בפרטים הבאים:
ParkNow intarntional
toha wework רחוב יגאל אלון 114 תל אביב, 6744320
052-5663105
</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="users">
        <item>שוכר</item>
        <item>משכיר</item>
    </string-array>

</resources>