<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linDetails"
        android:layout_width="390dp"
        android:layout_height="312dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/renter_txt"
            android:layout_width="282dp"
            android:layout_height="59dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="113dp"
            android:hint="@string/renter_text_1"
            android:textAlignment="center"
            android:textColor="#050505"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/renter_txt_1"
            android:layout_width="155dp"
            android:layout_height="38dp"
            android:layout_marginStart="117dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/renter_text_2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/renter_txt_2"
            android:layout_width="325dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="31dp"
            android:text="@string/renter_txt_2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/renter_txt_3"
            android:layout_width="313dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/renter_txt_3"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/renter_txt_4"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/renter_txt_4"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="18sp" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonGotIt"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linDetails"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/button_border"
        android:text="@string/b_skip"
        android:textColor="#FFFEFE"
        android:textSize="18sp" />
</LinearLayout>