<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="343dp"
        android:layout_height="142dp"
        android:layout_gravity="clip_horizontal"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/home_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parknowlogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="389dp"
        android:layout_height="520dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_logo"
        app:layout_constraintVertical_bias="0.644">

        <TextView
            android:id="@+id/home_txt"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:gravity="center"
            android:text="@string/h_txt"
            android:textAlignment="center"
            android:textColor="#020202"
            android:textSize="18sp" />

        <Button
            android:id="@+id/create_account"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/button_border"
            android:fontFamily="@font/yeseva_one"
            android:text="@string/b_register"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/background"
            android:lineSpacingExtra="18sp"
            android:text="@string/parknow"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#000000" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>