<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFF"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:animationCache="true">

    <ImageView
        android:id="@+id/sign_in_logo"
        android:layout_width="309dp"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/parknowlogo"
        android:contentDescription="@string/logo" />

    <View
        android:layout_marginTop="20dp"
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/sign_in_logo"
        android:layout_marginBottom="20dp"
        android:background="#C9C9C9" />

    <TextView

        android:id="@+id/txt_sign_user"
        android:layout_width="97dp"
        android:layout_height="41dp"
        android:layout_below="@id/seperator"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/txt_enter"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/username_enter_txt"
        android:layout_width="185dp"
        android:layout_height="46dp"
        android:layout_below="@id/seperator"
        android:layout_marginRight="30dp"
        android:layout_toLeftOf="@id/txt_sign_user"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/b_sign_psw"
        android:layout_width="97dp"
        android:layout_height="41dp"
        android:layout_below="@id/txt_sign_user"
        android:layout_alignRight="@id/txt_sign_user"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/psw_enter"
        android:textColor="#000000"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/psw_enter_txt"
        android:layout_width="185dp"
        android:layout_height="46dp"
        android:layout_below="@id/username_enter_txt"
        android:layout_alignTop="@id/b_sign_psw"
        android:layout_alignRight="@id/username_enter_txt"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_enter_txt" />


    <!--<ImageButton-->
    <!--android:id="@+id/google_sign_b"-->
    <!--android:layout_width="211dp"-->
    <!--android:layout_height="46dp"-->
    <!--android:layout_marginEnd="24dp"-->
    <!--android:layout_marginBottom="68dp"-->
    <!--android:contentDescription="@string/sign_google"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/psw_enter_txt"-->
    <!--app:layout_constraintVertical_bias="0.607"-->
    <!--app:srcCompat="@drawable/g_sign" />-->

    <Button
        android:id="@+id/reg_buttoun"
        android:layout_width="93dp"
        android:layout_height="42dp"
        android:layout_below="@id/b_sign_psw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/b_connect"
        android:textAlignment="center"
        android:textColor="#F8F8F8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_forget_psw"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:layout_below="@id/reg_buttoun"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/txt_forget"
        android:textAlignment="center"
        android:textColor="#64B5F6" />

</RelativeLayout>
